base server is DONE
