# api.yaml
@@ -181,7 +181,7 @@ paths:
         - BearerAuth: []
 
   /users/update/{id}:
-    put:
+    patch:
       tags:
         - user
       summary: Update user by ID
@@ -324,16 +324,8 @@ paths:
               required:
                 - email
       responses:
-        '200':
-          description: Verification email sent successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Verification email sent to example@mail.uk.com
+        '302':
+          description: Redirect to login page
         '400':
           description: Verification has already been passed
         '404':
@@ -449,7 +441,7 @@ paths:
         - BearerAuth: []
 
   /reviews/own/{id}:
-    put:
+    patch:
       tags:
         - review
       summary: Update a review by ID
@@ -537,8 +529,226 @@ paths:
         - BearerAuth: []
         
   # ===================================================================================================
+  /tasks:
+    get:
+      tags:
+        - tasks
+      summary: Get all tasks
+      parameters:
+        - name: month
+          in: query
+          description: number of month (optional)
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      tasksCurrentMonth:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/GetTask'
+                      allTasks:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/GetTask'
+      security:
+        - BearerAuth: []
 
-  
+    post:
+      tags:
+        - tasks
+      summary: Add a new task
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                start:
+                  type: string
+                  example: 09:30
+                end:
+                  type: string
+                  example: 10:30
+                priority:
+                  type: string
+                  enum:
+                    - high
+                    - medium
+                    - low
+                date:
+                  type: string
+                  pattern: "2023-06-05"
+                category:
+                  type: string
+                  enum:
+                    - to-do
+                    - in-progress
+                    - completed
+      responses:
+        '201':
+          description: Task created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      title:
+                        type: string
+                      start:
+                        type: string
+                      end:
+                        type: string
+                      priority:
+                        type: string
+                      date:
+                        type: string
+                      category:
+                        type: string
+                      owner:
+                        type: string
+                      createdAt:
+                        type: string
+                        example: 2023-06-05T10:05:11.538Z
+      security:
+        - BearerAuth: []
+
+  /tasks/{id}:
+    patch:
+      tags:
+        - tasks
+      summary: Update a tasks by ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the tasks to update
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                start:
+                  type: string
+                  example: 09:30
+                end:
+                  type: string
+                  example: 10:30
+                priority:
+                  type: string
+                  enum:
+                    - high
+                    - medium
+                    - low
+                date:
+                  type: string
+                  pattern: "2023-06-05"
+                category:
+                  type: string
+                  enum:
+                    - to-do
+                    - in-progress
+                    - completed
+      responses:
+        '200':
+          description: Task was updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      title:
+                        type: string
+                      start:
+                        type: string
+                      end:
+                        type: string
+                      priority:
+                        type: string
+                      date:
+                        type: string
+                      category:
+                        type: string
+                      owner:
+                        type: string
+                      createdAt:
+                        type: string
+                        example: 2023-06-05T10:05:11.538Z
+        '404':
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Task not found"
+      security:
+        - BearerAuth: []
+
+    delete:
+      tags:
+        - tasks
+      summary: Delete a task by ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the task to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Task was deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Task by ID:647b12d0a4286b7e663ecfea was deleted"
+        '404':
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Task not found"
+      security:
+        - BearerAuth: []
+
   # ===================================================================================================
 components:
   schemas:
@@ -583,6 +793,7 @@ components:
         - email
         - username
         - password
+    
     Review:
       type: object
       properties:
@@ -601,6 +812,39 @@ components:
       required:
         - stars
         - comment
+   
+    Task:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+          maxLength: 250
+        start:
+          type: string
+          pattern: '^\d{2}:\d{2}$'
+        end:
+          type: string
+          pattern: '^\d{2}:\d{2}$'
+        priority:
+          type: string
+          enum:
+            - high
+            - medium
+            - low
+        date:
+          type: string
+          pattern: '^\d{4}-\d{2}-\d{2}$'
+        category:
+          type: string
+          enum:
+            - to-do
+            - in-progress
+            - completed
+        owner:
+          type: string
+   
     UserUpdate:
       type: object
       properties:
@@ -630,12 +874,8 @@ components:
           type: string
           description: User's Skype ID
       required:
-        - avatarURL
         - email
         - username
-        - birthday
-        - phone
-        - skype
     GetAllReviewsResponse:
       type: object
       properties:
@@ -659,3 +899,26 @@ components:
                   createdAt:
                     type: string
                     example: 2023-06-03T06:21:30.884Z
+    GetTask:
+      type: object
+      properties:
+        _id:
+          type: string
+        title:
+          type: string
+        start:
+          type: string
+        end:
+          type: string
+        priority:
+          type: string
+        date:
+          type: string
+          format: date-time
+        category:
+          type: string
+        owner:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
